minor changes\optimizations